[gd_scene load_steps=2 format=3 uid="uid://dqdv1dvpasyd"]

[ext_resource type="Script" path="res://Main/main_menu.gd" id="1_hdyms"]

[node name="MainMenu" type="Node"]
process_mode = 1
script = ExtResource("1_hdyms")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 471.0
offset_top = 270.0
offset_right = 634.0
offset_bottom = 483.0
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Button3" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Challenges"

[node name="Button4" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Multiplayer"

[node name="Gallery" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Gallery"

[node name="Profile" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Profile"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="play_pressed"]
[connection signal="pressed" from="VBoxContainer/Gallery" to="." method="gallery_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="settings_pressed"]
